refactor: 승패 계산 로직 Players에 부여